# ssd-speckit-workshop

./: .gitignore  Makefile  README.md  github_auth.py  pyproject.toml  tasks.py  workshop-repo-brief.md
.github/: copilot-instructions.md
docs/: architecture.md  sdd_system.excalidraw
examples/: watchdog_skeleton.py
scripts/: capture.py  run_watchdog.py  verify_setup.py
specs/: expected_shas.json  submission_schema.json
tests/: test_smoke.py
