[project]
name = "workshop-speckit"
version = "0.1.0"
description = "Spec-Driven Development workshop — student scaffolding"
requires-python = ">=3.11"
dependencies = [
    # The package distributed by ssd-workshop-sim-drone is named `sim` (not
    # `sim-drone`). Pinned to a tag so all students get an identical wire shape
    # regardless of when they cloned during the workshop window.
    "sim @ git+https://github.com/AsafTzarfati/ssd-workshop-sim-drone.git@v0.2.0",
    "websockets>=12.0",
    "requests>=2.31",
    "agent-framework>=0.1.0",
    "agent-framework-github-copilot>=1.0.0b0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
