[project]
name = "workshop-speckit"
version = "0.1.0"
description = "Spec-Driven Development workshop — student scaffolding"
requires-python = ">=3.11"
dependencies = [
    # Distributed as a wheel (not a git+ clone) so the sim source does not land
    # in a sibling working copy at a guessable path. The sim is a black box —
    # students must derive pattern findings from telemetry only. Agent-facing
    # rules live in .github/copilot-instructions.md.
    "sim @ https://github.com/AsafTzarfati/ssd-workshop-sim-drone/releases/download/v0.2.0/sim-0.2.0-py3-none-any.whl",
    "websockets>=12.0",
    "requests>=2.31",
    "agent-framework>=0.1.0",
    "agent-framework-github-copilot>=1.0.0b0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
